allow producing to classic and inkless topics in the same request (#259)